--- a/chapter2.tex
+++ b/chapter2.tex
@@ -38,7 +38,7 @@
 
 \section{Descripción de un fluido}
 
-En esta sección plantearemos las ecuaciones fundamentales de la hidrodinámica, necesarias para la descripción del experimento de Faraday \cite{Faraday1831a}. En mecánica de fluidos, las ecuaciones que rigen el comportamiento de un fluido \cite{Landau1987, Batchelor2002, Lamb1975}, en su forma más general son:
+En esta sección plantearemos las ecuaciones fundamentales de la hidrodinámica, necesarias para la descripción del experimento de Faraday \cite{Faraday1831}. En mecánica de fluidos, las ecuaciones que rigen el comportamiento de un fluido \cite{Landau1987, Batchelor2002, Lamb1975}, en su forma más general son:
 
 \begin{equation} \label{eq201}
    \frac{\partial \rho}{\partial t} + \nabla \cdot (\rho \vec{v}) = 0,
