--- a/thesisphd.tex
+++ b/thesisphd.tex
@@ -6,6 +6,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%% PAQUETES %%%%%%%%%%%%%%%%%%%%%%%%
 
+\usepackage[spanish]{babel} 
 \usepackage{amsmath}                             %Never write a paper without using amsmath for its many new commands 
 \usepackage{amssymb}			%
 \usepackage{makeidx}			%
@@ -98,7 +99,7 @@
 \postgraduate{Doctorado en Ciencias en Ingeniería Mecánica}
 \degree{F\'ISICO}
 \supervisor{Dr. Ignacio Carvajal \\ Dr. Leonardo Sigalotti\\}
-\cityandyear{Ciudad de M\'exico, Agosto de 2019}
+\cityandyear{Ciudad de México, Agosto de 2019}
 \logouni{figuras/logo-ipn.png}
 \logofac{figuras/logo-esime.png}
 
@@ -119,7 +120,7 @@
 %\include{4dedicatoria}
 %\include{5agradecimientos}
 
-\setstretch{1.15} % for custom spacing
+\setstretch{1.5} % for custom spacing
 
 \tableofcontents
 \listoffigures
@@ -132,7 +133,7 @@
 
 \mainmatter
 \include{chapter1}
-\include{chapter2}
+%\include{chapter2}
 %\include{chapter3}
 %\include{chapter4}
 %\include{chapter5}
