--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,31 +1,41 @@
 \chapter*{Introducción}
 \addcontentsline{toc}{chapter}{Introducción}
 
-Al someter un liquido a vibraciones netamente verticales, se observa que en la superficie del liquido se presentan determinados patrones regulares definidos por un cierto rango de frecuencia y amplitudes de la frecuencia de excitación; a este fenómeno se le conoce como \textit{Inestabilidad de Faraday}. El estudio de este tipo de inestabilidad tiene una larga e interesante historia que involucra a dos de los científicos más destacados de la ciencia moderna. A mediados del año 1831, M. Faraday (1791-1867) realizó una serie de experimentos con fluidos sometidos a vibraciones verticales \cite{Faraday1831}. En su bitacora personal Faraday reportó que al hacer vibrar un fluido se presentan una serie de patrones cuadrados en su superficie ``Crispaciones casi siempre cuadrangulares, siempre cuando están bien formadas, pero modificadas por el borde del agua o el líquido, también por el centro de movimiento'' (Faraday, 1831) \cite{Martin1832}. En particular, Faraday señaló que la frecuencia de las ondas presentes en la superficie del liquido era la mitad de la frecuencia de excitación. Casi cuatro décadas después, L. Mathiessen cuestionó la respuesta subarmónica a las vibraciones puramente verticales \cite{Matthiessen1868}, argumentado la existencia de una sincronía entre el forzamiento y las ondas en la superficie del fluido. Esta controversia motivó a Lord Rayleigh (1842-1919) a hacer sus propios análisis, quien mediante un dispositivo bastante ingenioso pudo constatar la afirmación realizada por Faraday \cite{Rayleigh1883b}.\medskip
+Al someter un liquido a vibraciones verticales, en la superficie de este se observa la presencia de determinados patrones regulares, los cuales están definidos por un cierto rango de frecuencia y amplitudes; a este fenómeno se le conoce como \textit{Inestabilidad de Faraday}. El estudio de este tipo de inestabilidad tiene una larga e interesante historia que involucra a diversos científicos de los más destacados de la ciencia moderna. Sus inicios datan de mediados del año 1831, cuando M. Faraday (1791-1867) realizó una serie de experimentos con fluidos sometidos a vibraciones verticales \cite{Faraday1831}. Faraday reportó en su bitacora personal, que al hacer vibrar un fluido se presentan una serie de patrones cuadrados en su superficie ``Crispaciones casi siempre cuadrangulares, siempre cuando están bien formadas, pero modificadas por el borde del agua o el líquido, también por el centro de movimiento'' (Faraday, 1831) \cite{Martin1832} . También señaló que la frecuencia de las ondas presentes en la superficie del liquido era la mitad de la frecuencia de excitación. Casi cuatro décadas después, L. Mathiessen cuestionó la respuesta subarmónica propuesta por Faraday a las vibraciones puramente verticales \cite{Matthiessen1868}, argumentado la existencia de una sincronía entre el forzamiento y las ondas en la superficie en el fluido. Esta controversia motivó a Lord Rayleigh (1842-1919) a realizar sus propios análisis, quien mediante un dispositivo bastante ingenioso pudo constatar la afirmación realizada por Faraday \cite{Rayleigh1883b}. Es interesante notar que Lord Rayleigh reconoció tempranamente el experimento de Faraday como una inestabilidad paramétrica \cite{Rayleigh1883a}. En su trabajo de 1883, analizó la ecuación de Mathieu en presencia de amortiguamiento y encontró una condición necesaria para la respuesta subarmónica. Posteriormente motivado por el trabajo de G. W. Hill (1838-1914) \cite{Hill1886}, realizó un estudio mas detallado de las ecuación de Mathieu \cite{Rayleigh1887}.\medskip
 
-\begin{figure}
-\includegraphics[scale=1]{figuras/faradaysketch.png}
-\caption{Izquierda: Bocetos de patrones hexagonales, rectangulares y triangulares realizados por Faraday como posibles interpretaciones de la geometría de las crispaciones. Derecha: Diagrama de la vista superior realizada por Faraday de la distribución de crispaciones en un vaso de agua; ``x'' representa los lugares donde el de agua permanece inmóvil o las crispaciones son débiles, mientras que las líneas onduladas indican una superficie más agitada.\cite{Martin1832}} %sacado de Cavicchi
-\end{figure}
+%Posteriormente \cite{Rayleigh1887} motivado por el trabajo de G. W. Hill (1838-1914), que trataba sobre una generalización de la ecuación de Mathieu relativa al movimiento de la luna bajo la influencia del sol y la tierra \cite{Hill1886}, realizó un estudio mas detallado de las ecuación de Mathieu.\medskip
 
-En 1954, Benjamin y Ursell desarrollaron una teoría lineal sobre la naturaleza subarmónica de la inestabilidad, realizando la verificación teórica directamente de la hidrodinámica \cite{Benjamin1954}. Sin embargo, el análisis de Benjamin y Ursell se basa en una aproximación de flujo potencial, la cual está restringida únicamente a fluidos sin viscosidad. Si la inestabilidad es generada en un líquido viscoso, una parte de la energía mecánica es disipada debido a esta. Estos efectos generalmente se manejan agregando un amortiguamiento heurístico en la ecuación de Mathieu \cite{Landau1988}, que es proporcional a la viscosidad cinemática $\nu$. La inclusión de dicho término ha sido utilizado ampliamente en varios análisis lineales como los realizados por Müller \cite{Muller1993}; Kumar y Tuckerman \cite{Kumar1994}; Kumar \cite{Kumar1996} y Perlin y Schultz \cite{Perlin2000}. Sin embargo, esta aproximación ignora las capas límite viscosas a lo largo de las paredes del contenedor y debajo de la superficie, donde se produce una disipación adicional. \medskip
+\begin{center}
+	\begin{figure}
+	\centering
+        \begin{subfigure}[b]{0.5\textwidth}
+                \includegraphics[width=\linewidth]{figuras/faradaysketcha.png}
+                \caption{}
+%                \label{fig:gull}
+        \end{subfigure}%
+        \begin{subfigure}[b]{0.20\textwidth}
+                \includegraphics[width=\linewidth]{figuras/faradaysketchb.png}
+                \caption{}
+%                \label{fig:gull2}
+        \end{subfigure}%
+		\caption[Ilustraciones realizadas por Michael Faraday en su bitácora personal]{Ilustraciones realizadas por Michael Faraday en su bitácora personal \cite{Martin1832}. \textbf{(a)} Bocetos de patrones hexagonales, rectangulares y triangulares realizados por Faraday como posibles interpretaciones de la geometría de las crispaciones. \textbf{(b)} Diagrama de la vista superior realizada por Faraday de la distribución de crispaciones en un vaso de agua; ``x'' representa los lugares donde el de agua permanece inmóvil o las crispaciones son débiles, mientras que las líneas onduladas indican una superficie más agitada. \cite{Martin1832} } %sacado de Cavicchi
+	\end{figure}
+\end{center}
 
-La descripción matemática completa del problema involucra las ecuaciones de Navier-Stokes en un dominio con una superficie libre, donde las amplitudes de los modos normales se desacoplan y cumplen en primera aproximación de la ecuación de Mathieu, la cual es una ecuación diferencial ordinaria de segundo orden no autónoma. En matemáticas, un sistema no autónomo es un sistema de ecuaciones diferenciales ordinarias que depende explícitamente de la variable independiente. En este caso, la falta de autonomía está dada por el forzamiento externo que influye en los parámetros del fluido cuando se inicia el comportamiento oscilante. Benjamin y Ursell pudieron utilizar las propiedades de estabilidad conocidas de la ecuación de Mathieu para confirmar el punto de vista de Faraday y Rayleigh. Al tipo de inestabilidad presente en la ecuación de Mathieu se le llama \textit{Inestabilidad paramétrica}, y es conocida por estar presente en diversos sistemas como osciladores electrónicos, ondas de Langmuir en plasma y hasta en el comportamiento estocástico de un conjunto de precios sectoriales internacionales. El experimento mas representativo de este fenómeno es el péndulo excitado paramétricamente. Si el pivote del péndulo oscila verticalmente, el péndulo comenzará a oscilar horizontalmente con la mitad de la frecuencia de excitación para algunas amplitudes y frecuencias. En este ejemplo, así como en el experimento de Faraday, la aceleración gravitacional efectiva es el parámetro externo impulsador. La ecuación de Mathieu lleva el nombre del matemático francés E. L. Mathieu (1825-1890), quien en su trabajo original de 1868 muestra como resolver la ecuación de onda bidimensional para el movimiento de una membrana elíptica \cite{Mathieu1868}.\medskip
+En 1954, Benjamin y Ursell desarrollaron una teoría lineal sobre la naturaleza subarmónica de la inestabilidad, realizando la verificación teórica directamente de la hidrodinámica \cite{Benjamin1954}. Sin embargo, el análisis de Benjamin y Ursell se basa en una aproximación de flujo potencial, la cual está restringida únicamente a fluidos no viscosos. Si la inestabilidad es generada en un líquido viscoso, una parte de la energía mecánica es disipada debido a esta viscosidad. Estos efectos generalmente se manejan agregando un amortiguamiento heurístico en la ecuación de Mathieu \cite{Landau1988}, que es proporcional a la viscosidad cinemática $\nu$. La inclusión de dicho término ha sido utilizado ampliamente en varios análisis lineales como los realizados por Müller \cite{Muller1993}; Kumar y Tuckerman \cite{Kumar1994}; Kumar \cite{Kumar1996} y Perlin y Schultz \cite{Perlin2000}. Sin embargo, esta aproximación ignora las capas límite viscosas a lo largo de las paredes del contenedor y por debajo de la superficie, donde se produce una disipación adicional. \medskip
 
-Es interesante notar que Lord Rayleigh reconoció el experimento de Faraday como una inestabilidad paramétrica \cite{Rayleigh1883a}. En su trabajo de 1883, en realidad analizó la ecuación de Mathieu en presencia de amortiguamiento y encontró una condición necesaria para la respuesta subarmónica. Más tarde \cite{Rayleigh1887} elaboró sobre el tema inspirado en el trabajo del físico estadounidense G. W. Hill (1838-1914) \cite{Hill1886} sobre una generalización de la ecuación de Mathieu relativa al movimiento de la luna bajo la influencia del sol y la tierra.\medskip
+La descripción matemática completa del problema involucra las ecuaciones de Navier-Stokes en un dominio con una superficie libre, donde las amplitudes de los modos normales se desacoplan y cumplen en primera aproximación de la ecuación de Mathieu, la cual es una ecuación diferencial ordinaria de segundo orden no autónoma. Un sistema no autónomo es un sistema de ecuaciones diferenciales ordinarias que depende explícitamente de la variable independiente. En este caso, la falta de autonomía está dada por el forzamiento externo que influye en los parámetros del fluido cuando se inicia el comportamiento oscilante. Benjamin y Ursell pudieron utilizar las propiedades de estabilidad conocidas de la ecuación de Mathieu para confirmar el punto de vista de Faraday y Rayleigh. Al tipo de inestabilidad presente en la ecuación de Mathieu se le llama \textit{Inestabilidad paramétrica}, y es conocida por estar presente en diversos sistemas como osciladores electrónicos, ondas de Langmuir en plasma y hasta en el comportamiento estocástico de un conjunto de precios. El experimento mas representativo de este fenómeno es el péndulo excitado paramétricamente. El cual consiste en un péndulo cuyo pivote es excitado verticalmente, lo que dará origen a la oscilación horizontal del péndulo con la mitad de la frecuencia de excitación para algunas amplitudes y frecuencias. En este caso, así como en el experimento de Faraday, la aceleración gravitacional efectiva es el parámetro externo propulsor. La ecuación de Mathieu debe su nombre al matemático francés E. L. Mathieu (1825-1890), quien en su trabajo original de 1868 muestra como resolver la ecuación de onda bidimensional para el movimiento de una membrana elíptica \cite{Mathieu1868}.\medskip
 
-En las ultimos 50 años se ha realizado un esfuerzo por ampliar el análisis de Benjamin y Ursell a amplitudes finitas mediante la incorporación de no linealidades débiles. Por su parte, Dodge \textit{et al} encontraron congruencia entre sus medidas del umbral de amplitudes \cite{Dodge1965} y las predicciones no viscosas de Benjamin y Ursell, a excepción de tres discrepancias: (i) la teoría para liquidos no viscosos predice cero en el ubral de amplitud en resonancia, mientras que las ondas reales deben superar un umbral viscoso; (ii) el ancho de banda medido es más estrecho que la predicción no viscosa; y (iii) la frecuencia de resonancia medida es menor que la predicción no viscosa. Estas discrepancias ponen en evidencia los efectos viscosos. Dodge \textit{et al} también informaron mediciones de amplitud de ondas en cilindros circulares aproximadamente dos veces más grandes que las nuestras. Virnig \textit{et al} midieron las amplitudes de ondas en estado estacionario en grandes cilindros rectangulares en los que los efectos viscosos y capilares eran pequeños \cite{Virnig1988} obteniendo resultados que coinciden razonablemente con los cálculos de Gu \textit{et al} \cite{Gu1988}. Con el creciente interés en la dinámica no lineal y el caos temporal, el experimento de Faraday ha ganado un interés más amplio. Keolian \textit{et al} \cite{Keolian1981} observó un estado caótico en una célula anular fuertemente impulsada. Dos años después de que Gollub y Meyer \cite{Gollub1983} estudiaran la transición al caos de un modo único en una celda circular. Ciliberto y Gollub \cite{Ciliberto1984, Ciliberto1985} mostraron cómo la competencia entre dos modos superpuestos puede conducir al caos. Además, Simonelli y Gollub \cite{Simonelli1989} estudiaron las interacciones de dos modos casi degenerados por simetría.
+En las últimos 50 años se ha realizado un esfuerzo por ampliar el análisis de Benjamin y Ursell, a amplitudes finitas mediante la incorporación de no linealidades débiles, las cuales ha dado lugar a controversia. Por su parte, Dodge et al. \cite{Dodge1965}, Henstock y Sani \cite{Henstock1974} y Meron y Procaccia \cite{Meron1986} realizaron análisis para amplitudes finitas, resultado que son cuestionados por Miles \cite{Miles1984}. Ockendon y Ockendon \cite{Ockendon1973} extiende el análisis de Benjamin y Ursell a amplitudes pequeñas pero finitas, sin embargo, esto sin calcular explícitamente el parámetro de interacción que mide los efectos de inercia no lineales, siendo éstos los términos de tercer orden en las ecuaciones de movimiento. También determinan la estructura de bifurcación de las ecuaciones de evolución, incluyendo los efectos cualitativos del amortiguamiento lineal. Miles \cite{Miles1984}, por su parte, calcula el parámetro de interacción e incorpora el  amortiguamiento lineal. Gu et al. \cite{Gu1988} calculan el parámetro de interacción para un cilindro rectangular. Virnig et al. \cite{Virnig1988} pudieron medir las amplitudes de ondas en estado estacionario en grandes cilindros rectangulares en los que los efectos viscosos y capilares son pequeños, obteniendo resultados que coinciden razonablemente con los cálculos de Gu et al. \cite{Gu1988}. Con el creciente interés en la dinámica no lineal y el caos temporal, el experimento de Faraday ha ganado un interés más amplio. Keolian et al. \cite{Keolian1981} observó un estado caótico en un contenedor circular fuertemente impulsado.  Gollub y Meyer \cite{Gollub1983} estudiaron la transición al caos de un modo de oscilación único en una celda circular. Ciliberto y Gollub \cite{Ciliberto1984, Ciliberto1985} mostraron cómo los efectos de dos modos superpuestos puede conducir al caos. Simonelli y Gollub \cite{Simonelli1989} estudiaron las interacciones de dos modos casi degenerados por simetría. \medskip %lo de Dodge fue de Miles Single-modes
 
-Mas recientemente, la inestabilidad de Faraday se ha estudiado ampliamente, tanto teóricamente \cite{Benjamin1954}, \cite{Miles1984}, \cite{Holmes1984}, \cite{Meron1986}, \cite{Gu1987}, \cite{Armbruster1989} \cite{Feng1989} \cite{Umeki1989} \cite{Miles1990}, \cite{Miles1993}, \cite{Bechhoefer1996}, \cite{Muller1997}, \cite{Muller1998a}, \cite{Mancebo2002}, \cite{Huepe2006}, \cite{Perinet2010}, \cite{Perinet2012}, y experimentalmente \cite{Douady1990}, \cite{Edwards1994}, \cite{Bechhoefer1995}, \cite{Kityk2002}, \cite{Westra2003}, \cite{Residori2007}, \cite{NguyemThuLam2011} para el estudio de la formación de patrones. A partir de una elección adecuada de los parámetros experimentales, se pueden observar varios patrones distintos, que consisten en un conjunto de figuras geométricas ordenadas como rayas, cuadrados, triángulos y hexágonos. Patrones de superredes Kudrolli et al. \cite{Kudrolli1998} y estructuras localizadas Arbell y Fineberg \cite{Arbell2000}, \cite{Arbell2002} también se han observado utilizando forzamientos de dos frecuencias. Comprender los tipos de patrones que se forman es un desafío. El umbral de inestabilidad y los patrones observados dependen de la viscosidad y la tensión superficial del fluido, la aceleración forzada $\Gamma$ y la forma y tamaño del recipiente. Además, las fluctuaciones en la frecuencia y amplitud de la fuerza impulsora pueden llevar un patrón existente a un estado mixto con una fracción de caos espacio-temporal (Kudrolli y Gollub 1996).
+Otros estudios teóricos sobre la inestabilidad de Faraday han sido realizados por Miles \cite{Miles1984, Miles1993}, Miles y Henderson \cite{Miles1990}, Bechhoefer y Johnson \cite{Bechhoefer1996}, Müller et al. \cite{Muller1997}, Müller \cite{Muller1998a}, Mancebo y Vega \cite{Mancebo2002}, Huepe et al. \cite{Huepe2006}, y adicionalmente algunos estudios experimentales desarrollados por Douady \cite{Douady1990}, Edwards y Fauve \cite{Edwards1994}, Bechhoefer et al. \cite{Bechhoefer1995}, Kityk et al. \cite{Kityk2002}, Westra et al. \cite{Westra2003}, Residori et al. \cite{Residori2007}, Nguyem y Caps \cite{NguyemThuLam2011} para la formación de patrones. A partir de una elección adecuada de los parámetros experimentales, se pueden observar varios patrones distintos, que consisten en un conjunto de figuras geométricas ordenadas como rayas, cuadrados, triángulos y hexágonos. Kudrolli et al. \cite{Kudrolli1998} reportan patrones de superredes, mientras Arbell y Fineberg \cite{Arbell2000, Arbell2002} estructuras localizadas también se han observado utilizando forzamientos de dos frecuencias. Comprender los tipos de patrones que se forman es un desafío. El umbral de inestabilidad y los patrones observados dependen de la viscosidad y la tensión superficial del fluido, la aceleración adimensional de foramiento $\Gamma$, la forma y tamaño del recipiente. Además, las fluctuaciones en la frecuencia y amplitud de la fuerza impulsora pueden llevar a un patrón existente a un estado mixto con una fracción de caos espacio-temporal \cite{Kudrolli1996}.\medskip
 
-%---------------------------------
+En el límite de débil disipación, la comprensión de los resultados de los experimentos clásicos de Faraday se ha realizado basados en análisis lineales (Müller 1998) para un volumen de liquido espacialmente infinito. Además, los mecanismos de selección de patrones se han investigado utilizando las herramientas de simetría y teoría de la bifurcación \cite{Silber2000, Skeldon2007}. También han comenzado a aparecer simulaciones numéricas que implican la solución de las ecuaciones de Navier-Stokes acopladas a un método de seguimiento frontal para el tratamiento de la superficie libre, estas asumiendo que la superficie del líquido es perfectamente plana en las parades donde se aplican condiciones límite no deslizantes \cite{Perinet2009, Kahouadji2015}. Mas simulaciones numéricas han sido realizadas por otros autores como lo son las de Louis \cite{Louis2011} y Kentaro et al. \cite{Takagi2011, Takagi2015} Sin embargo, estas no dan cuenta del realismo de los  experimentos donde la dinámica del menisco es importante \cite{Douady1990}. En particular, para recipientes de pequeño tamaño existe un fuerte acoplamiento entre las ondas capilares generadas por el menisco y las ondas de Faraday \cite{NguyemThuLam2011}. Por otra parte, han surgido variantes particulares como la simulación realizada por Ebo Adou et al. en la cual una gota es sujeta a una fuerza externa periódica presentado inestabilidades de Faraday en su superficie.\medskip 
 
-La investigación mencionada anteriormente aborda el límite de las relaciones de aspecto bajas, es decir, cuando la longitud de onda es comparable al tamaño del sistema. En este caso, solo unos pocos modos se excitan simultáneamente y la dinámica es de baja dimensión. Gran parte del interés actual en el experimento de Faraday se debe a sus posibilidades como sistema con muchos grados de libertad. Para este propósito, el experimento de Faraday tiene dos ventajas principales; la relación de aspecto puede variarse simplemente variando la frecuencia, y la dinámica puede investigarse visualmente.
+Mientras que los experimentos clásicos de patrones de onda de Faraday se refieren a contenedores individuales de diversos tamaños y formas, Delon et al. \cite{Delon2010} observaron la formación de patrones regulares en el caso en que la interfaz líquido-aire se dividió en una red de celdas cuadradas. Se ha encontrado que este tipo de experimentos tiene aplicaciones potenciales para la detección y ubicación de líquidos en las  cavidades internas de las estructuras tipo panal empleadas en construcciones mecánicas y aeronáuticas. La característica dinámica de los patrones de onda que surgen en los arreglos de celdas también ayuda a comprender el ensamblaje de los esferoides celulares en la bioingeniería para la construcción tridimensional de tejidos y organoides \cite{Chen2015}. De esta manera, las funciones de onda correspondientes pueden predecir patrones de ensamblaje de esferoides celulares de diferentes modos simétricos. Particularmente, nuestra atención se centra en el empleo de ondas de Faraday para la atomización ultrasónica de líquidos. La técnica de atomización ultrasónica tiene como ventaja sobre las técnicas de atomización convencionales que con este metodo se puede tener control sobre el tamaño de partícula y la densidad de la niebla. Los primeros trabajos sobre el empleo de la inestabilidad de Faraday para formación de micro gotas o la atomización ultrasónica datan de 1962, siendo este fenómeno fue descrito por primera vez por Wood y Loomis \cite{Wood1927} como un medio práctico para producir aerosoles utilizando frecuencias iguales o superiores a 20 kHz. Desde entonces, los dispositivos de baja frecuencia (20 {100 kHz) y alta frecuencia (0.1 {5 MHz) han evolucionado. Los primeros y más comúnmente usados son los cristales piezoeléctricos que impulsan un transductor de metal sobre el cual se coloca el líquido a ser atomizado. El funcionamiento y eficiencia básica de tales dispositivos han sido estudiadas experimentalmente por Lang \cite{Lano1962}, Pohlman y Stamm \cite{Pohlman1965}, Lierke y Griesshammer \cite{Lierke1967}, Topp \cite{Topp1973} (1973) y Sindayihebura et al. \cite{Sindayihebura1997}.\medskip 
 
-Un resultado sorprendente para las relaciones de aspecto altas es la observación de que el relieve de la superficie puede tomar la forma de patrones ordenados que se asemejan mucho a los cristales bidimensionales. Sin embargo, la verdadera sorpresa es que estos patrones no se limitan a las celdas de una geometría particular. Para relaciones de aspecto altas, los límites se vuelven menos importantes y la geometría es la del plano infinito. Esto ya lo notó Faraday. Al estudiar el patrón cuadrado observa: `Evidentemente, no es causado por ondas interferentes, aunque puede resolverse en ellas. ... Además, por irregulares que sean los bordes, la disposición puede hacerse cuadrangular '[19, §58]. Ezerskii et al. (1986) informaron recientemente un patrón cuadrado (1986) en una geometría circular. [14, 15]. En el mismo año, Aleksandrov et al. [1] encontró un patrón hexagonal para las amplitudes de la unidad debajo de aquellas para las cuales observaron el patrón cuadrado. La selección de patrones para las relaciones de aspecto intermedias ha sido investigada por Douady y Fauve [10, 11]. Notamos que se pueden introducir múltiples números de onda críticos a través de un forzado con más de un componente de frecuencia. Esto favorece el sistema Faraday de otros sistemas de formación de patrones como la convección de Rayleigh-Benard y permite la ingeniería de patrones [13].
+Los estudios analíticos de Lang \cite{Lano1962}, Peskin y Raco \cite{Peskin1963} y Sindayihebura y Bolle \cite{Sindayihebura1997} se basan en el supuesto de que las gotas se forman en las crestas de las ondas capilares estacionarias presentes sobre la superficie de la película líquida. Yule y Al-Suleimani \cite{Yule2000} presentaron un estudio teórico para la expulsión aparentemente aleatoria de gotas de una celda de onda, aunque el modelo en sí es determinista; y Tsai et al. presentan una teoría lineal sobre la inestabilidad temporal de las ondas de Faraday para la eyección de microgotas monodispersas basada en la conservación de masa y las ecuaciones linealizadas de Navier-Stokes. Las investigaciones experimentales apuntan a comprender las características que dominan el proceso de atomización ultrasónica, donde analizan la distribución del tamaño de las gotas, velocidad de salida de las gotas o velocidad de atomización \cite{Barreras2002} \cite{Donnelly2004} y el efecto de las propiedades del los fluidos \cite{Avvaru2006, Ajay2013}. Las aplicaciones de la atomización ultrasónica empleando inestabilidades de Faraday son muy diversas. A la fecha, las investigaciones van dirigidas al rediseño de las boquillas de atomización ultrsónica para la maximización del caudal \cite{Dobre2002}, el estudio de los efectos de la aceleración a la cual es sometida la película de líquido y la ruptura de esta \cite{Cartellier2006}, y la validación de nuevo inyectores que combina los efectos de corte con el principio de atomización ultrasónica \cite{Boukra2009}.\medskip
 
-Varios autores han estudiado experimentalmente el desglose del patrón cuadrado a un estado desordenado a medida que aumenta la amplitud de la unidad. Tuffilaro y col. [65] estudió el longitud de correlación en función de la amplitud de la unidad y encontró un punto de transición bien definido. Por encima de la transición se encuentra el caos espacio-temporal o la turbulencia débil, es decir, se pierde la coherencia espacial pero la dinámica sigue dominada por una escala de longitud única. Ezerskii y col. [15, 16, 17] encontraron que la transición está mediada por el inicio de modulaciones transversales de longitud de onda larga. Las propiedades de transporte de las turbulentas olas de Faraday se han estudiado recientemente [59, 48]. Estos aspectos se revisan en las Refs. [22, 24] y [25].
+%----------------------------------------------------------------
 
-Varios trabajadores han realizado intentos teóricos para comprender la formación del patrón y la transición al caos espacio-temporal. El más ambicioso parece ser el de Milner [51], que aplica el método de escalas múltiples para derivar las ecuaciones de amplitud. Sobre la base de las consideraciones energéticas, concluye que el estado preferido es el patrón cuadrado. Esto está en contradicción con la observación antes mencionada de un patrón hexagonal [1], y con los resultados experimentales reportados en la presente tesis. La teoría de Levin et al. [42] predice patrones hexagonales y cuadrados, pero sus métodos y presunciones parecen muy burdos. Ezerskii, Rabinovich y col. [15, 16, 54, 55] aplican principalmente su versión de las ecuaciones de amplitud al problema del caos e intermitencia espacio-temporal.
-
-En esta tesis presentamos un estudio experimental del sistema de Faraday de alta relación de aspecto. Se hace hincapié en la observación de una serie de patrones cristalinos de diferente simetría. En particular, el descubrimiento de un estado cuasicristalino es de interés, ya que, según nuestro conocimiento, es el primer patrón de este tipo que se encuentra en un sistema hidrodinámico. El resto de la parte I de la tesis se organiza de la siguiente manera. En sec. 2 se desarrollan la hidrodinámica y la teoría lineal. La sección 3 ofrece una breve reseña histórica de los cuasicristales. En sec. 4 describimos la configuración experimental, y en la Sec. 5 se analiza el sistema óptico. En sec. 6 informamos nuestros resultados sobre la relación de dispersión, las tasas de amortiguamiento y la amplitud crítica, mientras que la Sec. 7 está dedicado a los patrones cristalinos y al diagrama de fases. La sección 8 contiene una discusión de la teoría no lineal. Cerramos esta parte de la tesis en la Sec. 9 con la conclusión.
+En esta tesis presentamos un estudio ... \textit{\textbf{Aquí iría una breve descripción del contenido de la tesis por capítulos. No mas de media cuartilla.}}
